--- a/css/CSSindex.css
+++ b/css/CSSindex.css
@@ -179,6 +179,7 @@ body {
   width: 41px;
   height: 40px;
   padding: 5px;
+  cursor: pointer;
 }
 
 .selection .bookride .dltext {
@@ -209,6 +210,7 @@ body {
   width: 41px;
   height: 40px;
   padding: 5px;
+  cursor: pointer;
 }
 
 /*map stuff*/
